force-app/main/default/objects/Expertise__c/Expertise__c.object-meta.xml
<CustomObject>
    <label>Expertise</label>
    <nameField>
        <label>Expertise</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expertise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>