force-app/main/default/objects/Expertise__c/fields/Certification_Required__c.field-meta.xml
<CustomField>
    <fullName>Certification_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Certified required or not</description>
    <inlineHelpText>Certification required for this expertise?</inlineHelpText>
    <label>Certification Required</label>
    <type>Checkbox</type>
</CustomField>