force-app/main/default/objects/Expertise__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>Classfication</description>
    <inlineHelpText>Classification</inlineHelpText>
    <label>Classification</label>
    <length>150</length>
    <type>Text</type>
</CustomField>