force-app/main/default/objects/Expertise__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Details</description>
    <inlineHelpText>Details</inlineHelpText>
    <label>Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>