force-app/main/default/objects/Expertise__c/fields/Hot_Technology__c.field-meta.xml
<CustomField>
    <fullName>Hot_Technology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot Technology</label>
    <type>Checkbox</type>
</CustomField>