force-app/main/default/objects/Expertise__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Expertise Level</description>
    <inlineHelpText>Expertise Level</inlineHelpText>
    <label>Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>