force-app/main/default/objects/Expertise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Classification__c</columns>
    <columns>Type__c</columns>
    <columns>Hot_Technology__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>